objects/Hotfix__c.object
<CustomObject>
    <fields>
        <fullName>AffectCritical__c</fullName>
        <label>Does this affect Critical Functionality?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AffectData__c</fullName>
        <label>Does this affect data integrity?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Requirement</label>
        <referenceTo>Business_Requirement__c</referenceTo>
        <relationshipLabel>Hotfixes</relationshipLabel>
        <relationshipName>Hotfixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ComponentDetails__c</fullName>
        <label>Component Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeployedToDevSandboxes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authorizes the Release team to deploy to the respective Development sandboxes.</description>
        <inlineHelpText>Authorizes the Release team to deploy to the respective Development sandboxes.</inlineHelpText>
        <label>Deploy To Dev Sandboxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeployedToSandboxes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>No Merge only Migration</inlineHelpText>
        <label>Deployed To Sandboxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_User_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Support</label>
        <referenceTo>EUS_EndUserSupport__c</referenceTo>
        <relationshipLabel>Hotfixes</relationshipLabel>
        <relationshipName>Hotfixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HotFixProcessFlow__c</fullName>
        <formula>IMAGE( &apos;/resource/HotFixProcessFlow&apos;, &apos;Status&apos; )  &amp; &quot;   &quot; &amp;     $Label.CLJUL16PAN017</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&amp;nbsp;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotfix_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotfix Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hotfixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HyperCare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be part of Hypercare Process</description>
        <label>HyperCare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncidentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Resource supporting track tickets (Sales, CCC..)</inlineHelpText>
        <label>Incident Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IncidentOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerEmail__c</fullName>
        <defaultValue>&quot;Anilkumar.Sistla@schneider-electric.com&quot;</defaultValue>
        <label>Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Stream__c</fullName>
        <label>Process Stream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account&amp;Contact</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>COINBFO</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>CustomerCommunity</fullName>
                </value>
                <value>
                    <fullName>DMT</fullName>
                </value>
                <value>
                    <fullName>FIO</fullName>
                </value>
                <value>
                    <fullName>I2P</fullName>
                </value>
                <value>
                    <fullName>I2PReturnRepair</fullName>
                </value>
                <value>
                    <fullName>IDMS</fullName>
                </value>
                <value>
                    <fullName>IPOStrategicProgram</fullName>
                </value>
                <value>
                    <fullName>ITBRR</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Non-bFO</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>Referential</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>UserManagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Hotfixes</relationshipLabel>
        <relationshipName>Hotfixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remedy_Ticket_ID__c</fullName>
        <label>Remedy Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remedy_Ticket_description__c</fullName>
        <inlineHelpText>Please enter notes/summary mentioned in Remedy ticket</inlineHelpText>
        <label>Remedy Ticket Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <formula>Hyperlink( CreatedBy.ManagerId , CreatedBy.Manager.FirstName+&apos; &apos;+ CreatedBy.Manager.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionCommit__c</fullName>
        <label>Revision Commit#</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Run_Test_Classes__c</fullName>
        <description>Enter the test classes to be run while deploying Class/Trigger</description>
        <inlineHelpText>Enter the test classes to be run while deploying Class/Trigger</inlineHelpText>
        <label>Run Test Classes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>SLA Details: Critical 4 Hours, High 1 Day,  Medium 2 Days, Low 4 Days</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1-Critical</fullName>
                </value>
                <value>
                    <fullName>2-High</fullName>
                </value>
                <value>
                    <fullName>3-Medium</fullName>
                </value>
                <value>
                    <fullName>4-Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolutionOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Hotfix Status State Models</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Request For Validation</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Metadata Change</fullName>
                </value>
                <value>
                    <fullName>Data Manipulation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usersaffected__c</fullName>
        <label>What % of your users are affected?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10</fullName>
                </value>
                <value>
                    <fullName>&lt;100</fullName>
                </value>
                <value>
                    <fullName>&gt;100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkaroundExists__c</fullName>
        <label>Do you have a viable workaround?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hotfix</label>
    <listViews>
        <fullName>ALL_HFs</fullName>
        <columns>NAME</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>Process_Stream__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>MigrationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL HFs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_Stream__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MigrationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HyperCare__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Approved</fullName>
        <columns>NAME</columns>
        <columns>Process_Stream__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MigrationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HyperCare__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Process_Stream__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hyoercare</fullName>
        <columns>NAME</columns>
        <columns>Process_Stream__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>HyperCare__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MigrationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HyperCare__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Hypercare</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CCC_hotfixes</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>Process_Stream__c</columns>
        <columns>HyperCare__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>MigrationDate__c</columns>
        <columns>Release__c</columns>
        <columns>ComponentDetails__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Stream__c</field>
            <operation>contains</operation>
            <value>ccc,cti</value>
        </filters>
        <label>CCC hotfixes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FIO_Hotfixes</fullName>
        <columns>NAME</columns>
        <columns>Process_Stream__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>HyperCare__c</columns>
        <columns>Release__c</columns>
        <columns>Type__c</columns>
        <columns>MigrationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Stream__c</field>
            <operation>equals</operation>
            <value>FIO</value>
        </filters>
        <label>FIO Hotfixes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDMS</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Stream__c</field>
            <operation>equals</operation>
            <value>IDMS</value>
        </filters>
        <label>IDMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDMS123456</fullName>
        <columns>NAME</columns>
        <columns>BusinessRequirement__c</columns>
        <columns>Description__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>HyperCare__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Stream__c</field>
            <operation>equals</operation>
            <value>IDMS</value>
        </filters>
        <label>IDMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDMS_R3</fullName>
        <columns>NAME</columns>
        <columns>Process_Stream__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>bFO R.2017_Referential</value>
        </filters>
        <filters>
            <field>Process_Stream__c</field>
            <operation>equals</operation>
            <value>IDMS</value>
        </filters>
        <label>IDMS bFO R.2017_Referential</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>July_2016_HyperCare</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>Process_Stream__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>HyperCare__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>bFO R.2016_07</value>
        </filters>
        <label>July 2016 - HyperCare</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Not_Closed_Migrated_Hotfix</fullName>
        <columns>NAME</columns>
        <columns>RevisionCommit__c</columns>
        <columns>Process_Stream__c</columns>
        <columns>Remedy_Ticket_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Migrated</value>
        </filters>
        <filters>
            <field>Process_Stream__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Not Closed Migrated Hotfix</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PRM_HF</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>MigrationDate__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>DeployedToDevSandboxes__c</columns>
        <columns>DeployedToSandboxes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Process_Stream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Stream__c</field>
            <operation>equals</operation>
            <value>PRM</value>
        </filters>
        <label>PRM HF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Q3_Hotfixes</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Process_Stream__c</columns>
        <columns>DeployedToDevSandboxes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/29/2016 1:00 PM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>Q3 Hotfixes</label>
        <language>en_US</language>
        <sharedTo>
            <group>SOLGlobalDeliveryReleaseTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Q3_Hotfixes_VIshnu</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Process_Stream__c</columns>
        <columns>DeployedToDevSandboxes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/29/2016 1:00 PM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>bFO R.2016_Q3</value>
        </filters>
        <filters>
            <field>Process_Stream__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <label>Q3 Hotfixes VIshnu</label>
        <language>en_US</language>
        <sharedTo>
            <group>SOLGlobalDeliveryReleaseTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Q4_Ref_2016_HyperCare</fullName>
        <columns>NAME</columns>
        <columns>Process_Stream__c</columns>
        <columns>Hotfix_Assigned_To__c</columns>
        <columns>IsMigrated__c</columns>
        <columns>Status__c</columns>
        <columns>HyperCare__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>bFO R.2016_Q4</value>
        </filters>
        <label>Q4/Ref 2016 HyperCare</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HF-{00000}</displayFormat>
        <label>HF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotfixes</pluralLabel>
    <recordTypes>
        <fullName>Approver</fullName>
        <active>true</active>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Migrator</fullName>
        <active>true</active>
        <label>Migrator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requestor</fullName>
        <active>true</active>
        <label>Requestor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reviewer</fullName>
        <active>true</active>
        <label>Reviewer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step1</fullName>
        <active>true</active>
        <description>This is set initially to the hotfix when it is not sent for approval</description>
        <label>Step1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step2</fullName>
        <active>true</active>
        <description>This is set to the hotfix when it is in approved state</description>
        <label>Step2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Validator</fullName>
        <active>true</active>
        <label>Validator</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HF_VR_JUL16PAN01_RestrictReleaseTeam</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; ($User.ProfileId &lt;&gt; &quot;00eA0000000uVHP&quot; ) &amp;&amp;  ISCHANGED( Hotfix_Assigned_To__c )</errorConditionFormula>
        <errorMessage>This field cannot be edited</errorMessage>
    </validationRules>
</CustomObject>